--- a/app/src/main/res/layout/team_schedule.xml
+++ b/app/src/main/res/layout/team_schedule.xml
@@ -46,13 +46,13 @@
                 <TableRow
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="4dp"
                     android:layout_weight="1"
-                    android:background="@color/red_alliance_light">
+                    android:background="@color/red_alliance_light"
+                    android:paddingBottom="4dp"
+                    android:paddingTop="4dp">
 
                     <TextView
-                        android:id="@+id/textView"
+                        android:id="@+id/red_team_1"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
@@ -61,7 +61,7 @@
                         android:textSize="@dimen/team_number_text"/>
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/red_team_2"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
@@ -70,7 +70,7 @@
                         android:textSize="@dimen/team_number_text"/>
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/red_team_3"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
@@ -83,13 +83,13 @@
                 <TableRow
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="4dp"
                     android:layout_weight="1"
-                    android:background="@color/blue_alliance_light">
+                    android:background="@color/blue_alliance_light"
+                    android:paddingBottom="4dp"
+                    android:paddingTop="4dp">
 
                     <TextView
-                        android:id="@+id/textView4"
+                        android:id="@+id/blue_team_1"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
@@ -98,7 +98,7 @@
                         android:textSize="@dimen/team_number_text"/>
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/blue_team_2"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
@@ -107,7 +107,7 @@
                         android:textSize="@dimen/team_number_text"/>
 
                     <TextView
-                        android:id="@+id/textView6"
+                        android:id="@+id/blue_team_3"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
@@ -128,10 +128,62 @@
                 android:gravity="center"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
-                android:textSize="18sp"
                 android:text="08:59 PM"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/primary_text"/>
+                android:textColor="@color/primary_text"
+                android:textSize="18sp"
+                android:visibility="gone"/>
+
+            <TableLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1.8"
+                android:orientation="horizontal"
+                android:visibility="visible">
+
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:background="@color/red_alliance_light"
+                    android:paddingBottom="4dp"
+                    android:paddingTop="4dp">
+
+                    <TextView
+                        android:id="@+id/red_score"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/sample_team"
+                        android:textSize="@dimen/team_number_text"
+                        android:textStyle="bold"/>
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:background="@color/blue_alliance_light"
+                    android:paddingBottom="4dp"
+                    android:paddingTop="4dp">
+
+                    <TextView
+                        android:id="@+id/blue_score"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/sample_team"
+                        android:textSize="@dimen/team_number_text"
+                        android:textStyle="bold"/>
+
+                </TableRow>
+
+            </TableLayout>
+
 
         </LinearLayout>
 
