--- a/app/src/main/res/layout/team_schedule.xml
+++ b/app/src/main/res/layout/team_schedule.xml
@@ -30,10 +30,10 @@
                 android:id="@+id/match_number"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_weight="1"
+                android:layout_weight="1.8"
                 android:gravity="center"
                 android:padding="8dp"
-                android:text="1"
+                android:text="qf-123"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/primary_text"/>
 
