--- a/app/src/main/res/layout/team_schedule.xml
+++ b/app/src/main/res/layout/team_schedule.xml
@@ -19,7 +19,6 @@
         card_view:cardElevation="2dp"
         card_view:cardUseCompatPadding="true">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,10 +29,9 @@
                 android:id="@+id/match_number"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:layout_weight="1.8"
+                android:layout_weight="1.7"
                 android:gravity="center"
-                android:padding="8dp"
-                android:text="qf-123"
+                android:text="QF-123"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/primary_text"/>
 
