--- a/app/src/main/res/layout/team_schedule.xml
+++ b/app/src/main/res/layout/team_schedule.xml
@@ -130,9 +130,10 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/primary_text"
                 android:textSize="18sp"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
 
             <TableLayout
+                android:id="@+id/score_table"
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
