--- a/app/src/main/res/layout/first_slide.xml
+++ b/app/src/main/res/layout/first_slide.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="10"
-              android:background="@color/cardview_light_background"
+              android:background="@color/blue_primary"
               android:orientation="vertical">
 
     <TextView
@@ -16,9 +16,17 @@
         android:gravity="center"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
-        android:text="Welcome to FRC Manager"
-        android:textColor="@color/accent"
+        android:text="@string/welcome_slide_text"
+        android:textColor="@color/icons"
         android:textSize="28sp"/>
+
+    <ImageView
+        android:layout_weight="3"
+        android:src="@drawable/app_icon"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:id="@+id/imageView"
+        android:contentDescription="@string/icon_description"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,8 +36,8 @@
         android:gravity="center"
         android:paddingLeft="64dp"
         android:paddingRight="64dp"
-        android:text="An FRC score tracking app based around your team"
-        android:textColor="@color/accent"
+        android:text="@string/app_description"
+        android:textColor="@color/icons"
         android:textSize="16sp"/>
 
     <TextView
