--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="divider">#B6B6B6</color>
     <color name="red_alliance_light">#FFCDD2</color>
     <color name="blue_alliance_light">#BBDEFB</color>
+    <color name="blue_primary">#2196F3</color>
+    <color name="blue_primary_dark">#1976D2</color>
 </resources>
