--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,16 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+    <style name="Setup" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/blue_primary</item>
+        <item name="colorPrimaryDark">@color/blue_primary_dark</item>
+        <item name="colorAccent">@color/blue_alliance_light</item>
+        <item name="colorControlNormal">@color/icons</item>
+        <item name="android:spinnerDropDownItemStyle">@style/setupSpinner</item>
+    </style>
 
+    <style name="setupSpinner" parent="Widget.AppCompat.DropDownItem.Spinner">
+
+    </style>
 
 </resources>
