--- a/app/src/main/res/layout/rank.xml
+++ b/app/src/main/res/layout/rank.xml
@@ -1,88 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/view"
+    <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        card_view:cardCornerRadius="2dp"
-        card_view:cardElevation="2dp"
-        card_view:cardUseCompatPadding="true">
+        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:visibility="visible">
 
-        <TableLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="horizontal"
-            android:visibility="visible">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
-            <TableRow
+            <TextView
+                android:id="@+id/rank"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/bg_cir"
+                android:gravity="center"
+                android:text="9999"
+                android:textColor="@color/icons"
+                android:textSize="13sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingRight="16dp">
+
+            <TextView
+                android:id="@+id/team_number"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp">
+                android:text="@string/sample_team"
+                android:textSize="@dimen/team_number_text"
+                android:textStyle="bold"/>
 
-                <TextView
-                    android:id="@+id/team_number"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/sample_team"
-                    android:textSize="@dimen/team_number_text"
-                    android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tot: 92, Played: 9, Auto: 10, Coopertition: 340, Container: 96, Litter: 88, Qual Avg: 69.55"
+                android:textSize="16sp"/>
 
-                <TextView
-                    android:id="@+id/team_name"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="10"
-                    android:gravity="center"
-                    android:text="The Hitchhikers"
-                    android:textSize="@dimen/team_number_text"
-                    android:textStyle="bold"/>
+        </LinearLayout>
 
-            </TableRow>
-
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp">
-
-                <TextView
-                    android:id="@+id/rank"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="Rank 1"
-                    android:textSize="@dimen/team_number_text"/>
-
-                <TextView
-                    android:id="@+id/details"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="10"
-                    android:gravity="center"
-                    android:text="Tot: 92, Played: 9, Auto: 10, Coopertition: 340, Container: 96, Litter: 88, Qual Avg: 69.55"
-                    android:textSize="@dimen/team_number_text"/>
-
-            </TableRow>
-
-        </TableLayout>
-
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
 </RelativeLayout>
