--- a/app/src/main/res/layout/award.xml
+++ b/app/src/main/res/layout/award.xml
@@ -1,61 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="horizontal"
+              android:paddingBottom="8dp"
+              android:paddingLeft="16dp"
+              android:paddingRight="16dp"
+              android:paddingTop="8dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/view"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        card_view:cardCornerRadius="2dp"
-        card_view:cardElevation="2dp"
-        card_view:cardUseCompatPadding="true">
 
-        <TableLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="horizontal"
-            android:visibility="visible">
+    <TextView
+        android:id="@+id/team_number"
+        android:layout_width="56dp"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:paddingEnd="16dp"
+        android:paddingRight="16dp"
+        android:text="@string/sample_team"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/team_number"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/sample_team"
-                    android:textSize="@dimen/team_number_text"
-                    android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/award_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="The Hitchhikers"
+            android:textSize="@dimen/team_number_text"
+            android:textStyle="bold"/>
 
-                <TextView
-                    android:id="@+id/award_name"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="10"
-                    android:gravity="center"
-                    android:text="The Hitchhikers"
-                    android:textSize="@dimen/team_number_text"
-                    android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/award_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=""
+            android:textSize="@dimen/team_number_text"/>
+    </LinearLayout>
 
-            </TableRow>
-
-        </TableLayout>
-
-    </android.support.v7.widget.CardView>
-
-</RelativeLayout>
+</LinearLayout>
