--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <intent
-        android:action="android.intent.action.VIEW"
-        android:targetClass="com.aquamorph.frcmanager.activities.Settings"
-        android:targetPackage="com.aquamorph"/>
-
     <PreferenceCategory
         android:summary="General"
         android:title="General">
+        <PreferenceScreen
+            android:summary=""
+            android:title="Relaunch Setup">
+            <intent android:action="com.aquamorph.frcmanager.activities.Setup"/>
+        </PreferenceScreen>
         <EditTextPreference
-            android:inputType="number"
             android:defaultValue="0000"
+            android:inputType="number"
             android:key="teamNumber"
             android:summary="Your teams number"
             android:title="Team Number"/>
         <EditTextPreference
-            android:inputType="number"
             android:defaultValue="2015"
+            android:inputType="number"
             android:key="year"
             android:summary="Select the year"
             android:title="Competition Year"/>
@@ -28,8 +28,8 @@
         android:title="About">
         <PreferenceScreen
             android:key="settings_version"
-            android:title="Version 0.1.0"
-            android:summary="Created by Christian Colglazier"/>
+            android:summary="Created by Christian Colglazier"
+            android:title="Version 0.1.0"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
