--- a/app/src/main/res/layout/event_slide.xml
+++ b/app/src/main/res/layout/event_slide.xml
@@ -5,32 +5,32 @@
               android:layout_height="match_parent"
               android:layout_weight="10"
               android:background="@color/blue_primary"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:paddingLeft="16dp"
+              android:paddingRight="16dp">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="3"
         android:fontFamily="sans-serif-thin"
         android:gravity="center"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
         android:text="@string/event_prompt"
         android:textColor="@color/icons"
         android:textSize="28sp"/>
 
     <Spinner
-        android:layout_weight="1"
+        android:id="@+id/event_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/event_spinner"
+        android:layout_weight="1"
         />
 
     <TextView
-        android:layout_weight="3"
         android:layout_width="fill_parent"
-        android:layout_height="64dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="3"/>
 
     <TextView
         android:layout_width="fill_parent"
