--- a/app/src/main/res/layout/first_slide.xml
+++ b/app/src/main/res/layout/first_slide.xml
@@ -5,7 +5,9 @@
               android:layout_height="match_parent"
               android:layout_weight="10"
               android:background="@color/blue_primary"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:paddingLeft="16dp"
+              android:paddingRight="16dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,19 +16,17 @@
         android:layout_weight="3"
         android:fontFamily="sans-serif-thin"
         android:gravity="center"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
         android:text="@string/welcome_slide_text"
         android:textColor="@color/icons"
         android:textSize="28sp"/>
 
     <ImageView
-        android:layout_weight="3"
-        android:src="@drawable/app_icon"
+        android:id="@+id/imageView"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:id="@+id/imageView"
-        android:contentDescription="@string/icon_description"/>
+        android:layout_weight="3"
+        android:contentDescription="@string/icon_description"
+        android:src="@drawable/app_icon"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,8 +34,6 @@
         android:layout_gravity="center"
         android:layout_weight="3"
         android:gravity="center"
-        android:paddingLeft="64dp"
-        android:paddingRight="64dp"
         android:text="@string/app_description"
         android:textColor="@color/icons"
         android:textSize="16sp"/>
