--- a/app/src/main/res/layout/year_slide.xml
+++ b/app/src/main/res/layout/year_slide.xml
@@ -5,7 +5,9 @@
               android:layout_height="match_parent"
               android:layout_weight="10"
               android:background="@color/blue_primary"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:paddingLeft="16dp"
+              android:paddingRight="16dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,8 +16,6 @@
         android:layout_weight="3"
         android:fontFamily="sans-serif-thin"
         android:gravity="center"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
         android:text="@string/year_prompt"
         android:textColor="@color/icons"
         android:textSize="28sp"/>
@@ -24,14 +24,12 @@
         android:id="@+id/year_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
         android:layout_weight="1"
         android:entries="@array/year_array"/>
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="64dp"
+        android:layout_height="0dp"
         android:layout_weight="3"/>
 
     <TextView
