--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -3,6 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="?backgroundColor"
               android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -23,8 +24,8 @@
 
     <FrameLayout
         android:id="@+id/content_frame"
-        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"/>
 
 </LinearLayout>
