--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,45 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="LightTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="backgroundColor">#FAFAFA</item>
+        <item name="cardBackground">#FAFAFA</item>
+        <item name="redAllianceBackground">@color/red_alliance_light</item>
+        <item name="blueAllianceBackground">@color/blue_alliance_light</item>
+        <item name="redAllianceText">@color/primary_text</item>
+        <item name="blueAllianceText">@color/primary_text</item>
+        <item name="text">@color/primary_text</item>
     </style>
+
+    <style name="DarkTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="backgroundColor">#424242</item>
+        <item name="cardBackground">#616161</item>
+        <item name="redAllianceBackground">@color/red_alliance_light</item>
+        <item name="blueAllianceBackground">@color/blue_alliance_light</item>
+        <item name="redAllianceText">@color/primary_text</item>
+        <item name="blueAllianceText">@color/primary_text</item>
+        <item name="text">@color/primary_text</item>
+    </style>
+
+    <style name="OMOLEDTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="backgroundColor">@color/black</item>
+        <item name="cardBackground">@color/black</item>
+        <item name="redAllianceBackground">@color/black</item>
+        <item name="blueAllianceBackground">@color/black</item>
+        <item name="redAllianceText">@color/red_alliance</item>
+        <item name="blueAllianceText">@color/blue_alliance</item>
+        <item name="text">@color/icons</item>
+    </style>
+
+
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
