--- a/app/src/main/res/drawable/line_divider_indented.xml
+++ b/app/src/main/res/drawable/line_divider_indented.xml
@@ -6,6 +6,6 @@
         <size
             android:width="1dp"
             android:height="1dp"/>
-        <solid android:color="@color/divider"/>
+        <solid android:color="?textOnBackground"/>
     </shape>
 </inset>
