--- a/app/src/main/res/drawable/line_divider.xml
+++ b/app/src/main/res/drawable/line_divider.xml
@@ -4,5 +4,5 @@
     <size
         android:width="1dp"
         android:height="1dp"/>
-    <solid android:color="?textOnBackground"/>
+    <solid android:color="#ffffff"/>
 </shape>
