Added outline for bracket

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="red_alliance">#F44336</color>
     <color name="blue_alliance">#2196F3</color>
     <color name="red_alliance_light">#FFCDD2</color>
-    <color name="blue_alliance_light">#BBDEFB</color>
+    <color name="blue_alliance_light">#bbdefb</color>
     <color name="blue_primary">#2196F3</color>
     <color name="blue_primary_dark">#1976D2</color>
     <color name="black">#000000</color>
